kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-server
  namespace: homework
  labels:
    app: static-web-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: static-web-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: static-web-server
    spec:
      serviceAccountName: monitoring
      containers:
        - image: joseluisq/static-web-server:2
          name: static-beb-server
          imagePullPolicy: { { .Values.image.pullPolicy } }
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "rm  /homework/index.html"]
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            # exec:
            #  command: ["/bin/sh", "-c", "cat /homework/index.html"]

            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /homework
            - name: config-map
              mountPath: /homework/conf
            - name: nginx-config-map
              mountPath: /homework/config
              readOnly: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: homework
                    operator: In
                    values:
                      - "true"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hw-pvc
        - name: config-map
          configMap:
            name: hw-cmap
        - name: nginx-config-map
          configMap:
            name: nginx-cmap
